2025-12-11T02:04:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20119507291 # 1663
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-11
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3848 / 0 3850 / +0 +2

2025-12-10T02:02:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20084770914 # 1661
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-10
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3846 / 0 3848 / +0 +2

2025-12-09T12:55:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20064212724 # 1660
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-09
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3842 / 0 3846 / +0 +4

2025-12-08T12:54:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20028791115 # 1658
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-08
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3841 / 0 3842 / +0 +1

2025-12-08T02:01:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20014280466 # 1657
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-08
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3839 / 0 3841 / +0 +2

2025-12-07T12:46:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20004432675 # 1656